# NovaCommonLibraryNative

./: .gitignore  CMakeLists.txt  CMakePresets.json  cpp.hint
NclRunner/: CMakeLists.txt  main.cpp
NovaCommonLibraryNative/: CMakeLists.txt
NovaCommonLibraryNative/include/: FileLogger.h  Library.h  Logger.h  Macros.h  OSConstants.h  StringUtils.h
NovaCommonLibraryNative/src/: FileLogger.cpp  Library.cpp  Logger.cpp  StringUtils.cpp
Tests/: CMakeLists.txt  StringUtilsTests.cpp  TestUtils.h
Tests/Libs/Catch2/: _VERSION.txt
